# prismOS

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  run-aarch64.sh  setup.sh
.github/workflow/: build-aarch64.yml
.github/workflows/: build-aarch64.yml
cmake/toolchains/: aarch64.cmake
kernel/arch/aarch64/: bootloader.s  linker.ld  threading.s
kernel/arch/aarch64/drivers/: pl011_uart.cpp  pl011_uart.hpp
kernel/common/: console.cpp  console.hpp  cppruntime_support.cpp  cppruntime_support.hpp  kernel.cpp  main.cpp
kernel/common/drivers/: fdt.cpp  fdt.hpp  virtio.cpp  virtio.hpp
kernel/common/lib/: cstring.cpp  cstring.hpp  memory.cpp  memory.hpp  thread.cpp  thread.hpp
kernel/common/std/: atomic.hpp  format.hpp  limits.hpp  print.hpp  stdint.hpp  string.hpp  thread.hpp  types.hpp  utility.hpp
